--- a/astro/package.json
+++ b/astro/package.json
@@ -22,6 +22,9 @@
     "@astrojs/sitemap": "^0.1.0",
     "@astrojs/tailwind": "^0.2.1",
     "@astrojs/turbolinks": "^0.1.2",
+    "@types/jsdom": "^16.2.14",
+    "@types/lodash": "^4.14.182",
+    "@types/promise-hash": "^1.3.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "astro": "^1.0.0-beta.27",
@@ -31,11 +34,20 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@astro-community/astro-embed-twitter": "^0.1.2",
+    "@astro-community/astro-embed-youtube": "^0.1.0",
+    "axios": "^0.27.2",
+    "axios-cache-adapter": "^2.7.3",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
+    "jsdom": "^19.0.0",
+    "lodash": "^4.17.21",
+    "node-cache": "^5.1.2",
+    "plaiceholder": "^2.3.0",
+    "postscribe": "^2.0.8",
     "preact": "^10.7.1",
+    "promise-hash": "^1.3.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-lite-youtube-embed": "^2.2.2"
+    "react-dom": "^18.1.0"
   }
 }
