--- a/astro/package.json
+++ b/astro/package.json
@@ -41,6 +41,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "jsdom": "^19.0.0",
+    "lastfm-typed": "^2.0.1",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
     "plaiceholder": "^2.3.0",
