--- a/astro/package.json
+++ b/astro/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --experimental-integrations",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
@@ -36,6 +36,7 @@
   "dependencies": {
     "@astro-community/astro-embed-twitter": "^0.1.2",
     "@astro-community/astro-embed-youtube": "^0.1.0",
+    "astro-imagetools": "^0.6.3",
     "axios": "^0.27.2",
     "axios-cache-adapter": "^2.7.3",
     "clsx": "^1.1.1",
@@ -49,6 +50,8 @@
     "preact": "^10.7.1",
     "promise-hash": "^1.3.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-activity-calendar": "^1.5.0",
+    "react-dom": "^18.1.0",
+    "sharp": "^0.30.4"
   }
 }
