--- a/astro/package.json
+++ b/astro/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "astro dev --experimental-integrations",
+    "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
@@ -27,7 +27,7 @@
     "@types/promise-hash": "^1.3.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
-    "astro": "^1.0.0-beta.27",
+    "astro": "^1.0.0-beta.28",
     "prettier": "^2.6.2",
     "prettier-plugin-astro": "^0.0.12",
     "sass": "^1.50.1",
@@ -41,17 +41,17 @@
     "axios-cache-adapter": "^2.7.3",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
+    "imagetools-core": "^3.0.2",
     "jsdom": "^19.0.0",
     "lastfm-typed": "^2.0.1",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
-    "plaiceholder": "^2.3.0",
     "postscribe": "^2.0.8",
     "preact": "^10.7.1",
     "promise-hash": "^1.3.0",
     "react": "^18.1.0",
     "react-activity-calendar": "^1.5.0",
     "react-dom": "^18.1.0",
-    "sharp": "^0.30.4"
+    "sharp": "^0.29.3"
   }
 }
