--- a/next/package.json
+++ b/next/package.json
@@ -19,15 +19,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.5.2",
-    "@mdx-js/loader": "^2.1.0",
-    "@mdx-js/mdx": "^2.1.0",
-    "@mdx-js/react": "^2.1.0",
+    "@builder.io/partytown": "^0.5.4",
     "axios": "^0.26.1",
     "axios-cache-adapter": "^2.7.3",
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-sankey": "^0.8.1",
+    "contentlayer": "^0.2.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "esbuild": "^0.14.29",
@@ -36,9 +34,11 @@
     "jsdom": "^19.0.0",
     "lastfm-typed": "^2.0.1",
     "lodash": "^4.17.21",
+    "markdown-wasm": "^1.2.0",
     "mdx-bundler": "^9.0.0",
     "next": "12.1.5",
     "next-compose-plugins": "^2.2.1",
+    "next-contentlayer": "^0.2.5",
     "next-images": "^1.8.4",
     "next-transpile-modules": "^9.0.0",
     "node-cache": "^5.1.2",
