--- a/next/package.json
+++ b/next/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^3.7.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-sankey": "^0.8.1",
+    "clsx": "^1.1.1",
     "contentlayer": "^0.2.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
@@ -90,12 +91,14 @@
     "@types/webfontloader": "^1.6.34",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "autoprefixer": "^10.4.7",
     "babel-plugin-macros": "^3.1.0",
     "eslint": "8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "next-sitemap": "^2.5.14",
+    "postcss": "^8.4.14",
     "prettier": "^2.6.0",
     "raw-loader": "^4.0.2",
     "sass": "^1.49.9",
