Largely remove styled-components from the global styles

--- a/next/package.json
+++ b/next/package.json
@@ -119,6 +119,11 @@
       "debug": false
     }
   },
+  "sass": {
+    "includePaths": [
+      "./node_modules"
+    ]
+  },
   "browserslist": [
     "last 2 versions",
     ">1%",
