--- a/next/package.json
+++ b/next/package.json
@@ -102,6 +102,7 @@
     "prettier": "^2.6.0",
     "raw-loader": "^4.0.2",
     "sass": "^1.49.9",
+    "ts-node": "^10.8.0",
     "typescript": "4.6.2"
   },
   "prettier": {
