--- a/next/package.json
+++ b/next/package.json
@@ -65,6 +65,10 @@
     "rehype-image-placeholder": "^1.0.1",
     "rehype-prism-plus": "^1.3.2",
     "rehype-slug": "^5.0.1",
+    "remark": "^14.0.2",
+    "remark-comment": "^1.0.0",
+    "remark-excerpt": "^1.0.0-beta.1",
+    "remark-parse": "^10.0.1",
     "remark-unwrap-images": "^3.0.1",
     "schema-dts": "^1.1.0",
     "sharp": "^0.30.3",
