--- a/next/package.json
+++ b/next/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@builder.io/partytown": "^0.5.4",
+    "@eligundry/remark-excerpt": "^2.0.0-beta.2",
     "axios": "^0.26.1",
     "axios-cache-adapter": "^2.7.3",
     "chart.js": "^3.7.1",
@@ -68,6 +69,7 @@
     "remark": "^14.0.2",
     "remark-comment": "^1.0.0",
     "remark-excerpt": "^1.0.0-beta.1",
+    "remark-inline-links": "^6.0.1",
     "remark-parse": "^10.0.1",
     "remark-unwrap-images": "^3.0.1",
     "schema-dts": "^1.1.0",
