--- a/next/package.json
+++ b/next/package.json
@@ -22,25 +22,25 @@
     "clean": "rm -rf .next .contentlayer .netlify _next"
   },
   "dependencies": {
-    "@builder.io/partytown": "^0.5.4",
+    "@builder.io/partytown": "^0.6.0",
     "@eligundry/remark-excerpt": "^2.0.0-beta.2",
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "axios-cache-adapter": "^2.7.3",
-    "chart.js": "^3.7.1",
+    "chart.js": "^3.8.0",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-sankey": "^0.8.1",
     "clsx": "^1.1.1",
     "contentlayer": "^0.2.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
-    "esbuild": "^0.14.29",
+    "esbuild": "^0.14.42",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "jsdom": "^19.0.0",
     "lastfm-typed": "^2.0.1",
     "lodash": "^4.17.21",
     "markdown-wasm": "^1.2.0",
-    "mdx-bundler": "^9.0.0",
+    "mdx-bundler": "^9.0.1",
     "next": "12.1.5",
     "next-compose-plugins": "^2.2.1",
     "next-contentlayer": "^0.2.5",
@@ -64,25 +64,16 @@
     "react-twitter-embed": "^4.0.4",
     "react-use": "^17.3.2",
     "reading-time": "^1.5.0",
-    "rehype-accessible-emojis": "^0.3.2",
-    "rehype-image-placeholder": "^1.0.1",
-    "rehype-prism-plus": "^1.3.2",
-    "rehype-slug": "^5.0.1",
-    "remark": "^14.0.2",
-    "remark-comment": "^1.0.0",
-    "remark-excerpt": "^1.0.0-beta.1",
-    "remark-inline-links": "^6.0.1",
-    "remark-parse": "^10.0.1",
-    "remark-unwrap-images": "^3.0.1",
     "schema-dts": "^1.1.0",
     "sharp": "^0.30.3",
     "simple-git": "^3.4.0",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.24",
     "url-join-ts": "^1.0.5",
     "use-dark-mode": "^2.3.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.7.1",
     "@next/bundle-analyzer": "^12.1.2",
     "@types/color-thief-node": "^1.0.1",
     "@types/jsdom": "^16.2.14",
@@ -105,6 +96,16 @@
     "postcss": "^8.4.14",
     "prettier": "^2.6.0",
     "raw-loader": "^4.0.2",
+    "rehype-accessible-emojis": "^0.3.2",
+    "rehype-image-placeholder": "^1.0.1",
+    "rehype-prism-plus": "^1.3.2",
+    "rehype-slug": "^5.0.1",
+    "remark": "^14.0.2",
+    "remark-comment": "^1.0.0",
+    "remark-excerpt": "^1.0.0-beta.1",
+    "remark-inline-links": "^6.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-unwrap-images": "^3.0.1",
     "sass": "^1.49.9",
     "ts-node": "^10.8.0",
     "typescript": "4.6.2"
