--- a/next/package.json
+++ b/next/package.json
@@ -23,7 +23,6 @@
   },
   "dependencies": {
     "@builder.io/partytown": "^0.6.0",
-    "@eligundry/remark-excerpt": "^2.0.0-beta.2",
     "axios": "^0.27.2",
     "axios-cache-adapter": "^2.7.3",
     "chart.js": "^3.8.0",
@@ -73,6 +72,7 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@eligundry/remark-excerpt": "^2.0.0",
     "@netlify/plugin-nextjs": "^4.7.1",
     "@next/bundle-analyzer": "^12.1.2",
     "@types/color-thief-node": "^1.0.1",
