--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,7 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
-[*.{ejs,html,json,jinja,lr,xml,md,mdx,yml}]
+[*.{ejs,html,json,jinja,lr,xml,md,mdx,yml,njk,liquid}]
 indent_style = space
 indent_size = 2
 
