--- a/11ty/package.json
+++ b/11ty/package.json
@@ -13,8 +13,10 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-fetch": "^3.0.0",
     "@tailwindcss/typography": "^0.5.7",
     "daisyui": "^2.27.0",
+    "date-fns": "^2.29.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8"
