--- a/11ty/package.json
+++ b/11ty/package.json
@@ -17,9 +17,12 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-fetch": "^3.0.0",
+    "@11ty/eleventy-img": "^2.0.1",
     "@tailwindcss/typography": "^0.5.7",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.2",
+    "dotenv": "^16.0.2",
+    "lastfm-typed": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8"
