--- a/11ty/package.json
+++ b/11ty/package.json
@@ -19,10 +19,14 @@
     "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^2.0.1",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/async-retry": "^1.4.5",
+    "async-retry": "^1.3.3",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.2",
     "dotenv": "^16.0.2",
+    "jsdom": "^20.0.0",
     "lastfm-typed": "^2.0.2",
+    "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8"
