--- a/11ty/package.json
+++ b/11ty/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "start": "run-p 'watch:*'",
     "watch:11ty": "eleventy --serve",
-    "watch:tailwind": "npm run tailwind -- --watch",
-    "tailwind": "tailwindcss -i ./css/tailwind.css -o ./_site/css/style.css",
+    "watch:tailwind": "npm run build:tailwind -- --watch",
     "build": "run-s build:tailwind build:11ty",
     "build:11ty": "eleventy",
-    "build:tailwind": "npm run tailwind"
+    "build:tailwind": "tailwindcss -i ./css/tailwind.css -o ./_site/css/style.css --postcss postcss.config.js"
   },
   "author": "Eli Gundry <eligundry@gmail.com>",
   "license": "MIT",
@@ -27,7 +26,12 @@
     "jsdom": "^20.0.0",
     "lastfm-typed": "^2.0.2",
     "lodash": "^4.17.21",
+    "markdown-it": "^13.0.1",
+    "markdown-it-highlightjs": "^4.0.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.16",
+    "postcss-import": "^15.0.0",
+    "postcss-nesting": "^10.2.0",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8"
   }
