--- a/11ty/package.json
+++ b/11ty/package.json
@@ -17,6 +17,7 @@
     "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^2.0.1",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@tailwindcss/typography": "^0.5.7",
     "@types/async-retry": "^1.4.5",
     "async-retry": "^1.3.3",
