--- a/11ty/package.json
+++ b/11ty/package.json
@@ -18,6 +18,7 @@
     "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "@tailwindcss/typography": "^0.5.7",
     "@types/async-retry": "^1.4.5",
     "async-retry": "^1.3.3",
@@ -27,8 +28,6 @@
     "jsdom": "^20.0.0",
     "lastfm-typed": "^2.0.2",
     "lodash": "^4.17.21",
-    "markdown-it": "^13.0.1",
-    "markdown-it-highlightjs": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
