--- a/11ty/package.json
+++ b/11ty/package.json
@@ -34,5 +34,8 @@
     "postcss-nesting": "^10.2.0",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "@11ty/is-land": "^1.0.0"
   }
 }
