--- a/11ty/package.json
+++ b/11ty/package.json
@@ -9,7 +9,8 @@
     "watch:tailwind": "npm run build:tailwind -- --watch",
     "build": "run-s build:tailwind build:11ty",
     "build:11ty": "eleventy",
-    "build:tailwind": "tailwindcss -i ./src/css/tailwind.css -o ./_site/css/style.css --postcss postcss.config.js"
+    "build:tailwind": "tailwindcss -i ./src/css/tailwind.css -o ./_site/css/style.css --postcss postcss.config.js",
+    "dev:netlify": "cross-env NODE_ENV=development netlify dev"
   },
   "author": "Eli Gundry <eligundry@gmail.com>",
   "license": "MIT",
@@ -22,6 +23,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "@types/async-retry": "^1.4.5",
     "async-retry": "^1.3.3",
+    "cross-env": "^7.0.3",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.2",
     "dotenv": "^16.0.2",
