--- a/11ty/package.json
+++ b/11ty/package.json
@@ -4,14 +4,15 @@
   "description": "My personal site with 11ty.dev",
   "main": "index.js",
   "scripts": {
-    "start": "run-p 'watch:*'",
+    "start": "run-p 'watch:*' partytown",
     "watch:11ty": "eleventy --serve",
     "watch:tailwind": "npm run build:tailwind -- --watch",
-    "build": "run-s build:tailwind build:11ty",
+    "build": "run-s build:tailwind partytown build:11ty",
     "build:11ty": "eleventy",
     "build:tailwind": "tailwindcss -i ./src/css/tailwind.css -o ./_site/css/style.css --postcss postcss.config.js",
     "netlify:dev": "cross-env NODE_ENV=development netlify dev",
-    "netlify:build": "cross-env NODE_ENV=production netlify build"
+    "netlify:build": "cross-env NODE_ENV=production netlify build",
+    "partytown": "partytown copylib _site/~partytown"
   },
   "author": "Eli Gundry <eligundry@gmail.com>",
   "license": "MIT",
@@ -21,6 +22,7 @@
     "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+    "@builder.io/partytown": "^0.7.0",
     "@tailwindcss/typography": "^0.5.7",
     "@types/async-retry": "^1.4.5",
     "async-retry": "^1.3.3",
