--- a/astro/package.json
+++ b/astro/package.json
@@ -10,10 +10,21 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "bracketSpacing": true
+  },
   "dependencies": {
     "@astrojs/tailwind": "^2.1.0",
     "@tailwindcss/typography": "^0.5.7",
     "astro": "^1.5.0",
+    "axios": "^0.27.2",
+    "axios-cache-interceptor": "^0.10.7",
+    "cache-manager": "^3.2.1",
+    "cache-manager-fs-hash": "^1.0.0",
     "clsx": "^1.2.1",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.3",
@@ -22,11 +33,7 @@
     "postcss-nesting": "^10.2.0",
     "tailwindcss": "^3.1.8"
   },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 2,
-    "semi": false,
-    "singleQuote": true,
-    "bracketSpacing": true
+  "devDependencies": {
+    "@types/cache-manager": "^3.4.3"
   }
 }
