Add the last.fm cover to the homepage

--- a/astro/package.json
+++ b/astro/package.json
@@ -28,6 +28,7 @@
     "clsx": "^1.2.1",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.3",
+    "lastfm-typed": "^2.0.2",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
     "postcss-nesting": "^10.2.0",
