--- a/astro/package.json
+++ b/astro/package.json
@@ -25,16 +25,21 @@
     "axios-cache-interceptor": "^0.10.7",
     "cache-manager": "^3.2.1",
     "cache-manager-fs-hash": "^1.0.0",
+    "canvas": "^2.10.1",
     "clsx": "^1.2.1",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.3",
+    "jsdom": "^20.0.1",
     "lastfm-typed": "^2.0.2",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
     "postcss-nesting": "^10.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@types/cache-manager": "^3.4.3"
+    "@types/cache-manager": "^3.4.3",
+    "@types/jsdom": "^20.0.0",
+    "@types/lodash": "^4.14.186"
   }
 }
