--- a/astro/package.json
+++ b/astro/package.json
@@ -18,7 +18,9 @@
     "bracketSpacing": true
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.11.4",
     "@astrojs/tailwind": "^2.1.0",
+    "@eligundry/remark-excerpt": "^2.0.0",
     "@tailwindcss/typography": "^0.5.7",
     "astro": "^1.5.0",
     "axios": "^0.27.2",
@@ -35,11 +37,22 @@
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
     "postcss-nesting": "^10.2.0",
+    "reading-time": "^1.5.0",
+    "rehype-accessible-emojis": "^0.3.2",
+    "rehype-prism-plus": "^1.3.2",
+    "rehype-slug": "^5.0.1",
+    "remark": "^14.0.2",
+    "remark-comment": "^1.0.0",
+    "remark-excerpt": "^1.0.0-beta.1",
+    "remark-inline-links": "^6.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-unwrap-images": "^3.0.1",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/cache-manager": "^3.4.3",
     "@types/jsdom": "^20.0.0",
-    "@types/lodash": "^4.14.186"
+    "@types/lodash": "^4.14.186",
+    "simple-git": "^3.14.1"
   }
 }
