--- a/astro/package.json
+++ b/astro/package.json
@@ -18,6 +18,8 @@
     "bracketSpacing": true
   },
   "dependencies": {
+    "@astro-community/astro-embed-twitter": "^0.1.3",
+    "@astro-community/astro-embed-youtube": "^0.2.1",
     "@astrojs/mdx": "^0.11.4",
     "@astrojs/tailwind": "^2.1.0",
     "@eligundry/remark-excerpt": "^2.0.0",
