--- a/astro/package.json
+++ b/astro/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@example/basics",
+  "name": "@eligundry/eligundry.com",
   "type": "module",
-  "version": "0.0.1",
-  "private": true,
+  "version": "5.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -27,14 +27,14 @@
     "astro": "^1.5.0",
     "axios": "^0.27.2",
     "axios-cache-interceptor": "^0.10.7",
-    "cache-manager": "^3.2.1",
-    "cache-manager-fs-hash": "^1.0.0",
+    "cache-manager": "^5.1.3",
+    "cache-manager-better-sqlite3": "^1.0.2",
     "canvas": "^2.10.1",
     "clsx": "^1.2.1",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.3",
     "jsdom": "^20.0.1",
-    "lastfm-typed": "^2.0.2",
+    "lastfm-typed": "^2.1.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
@@ -52,9 +52,13 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@types/cache-manager": "^3.4.3",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/jsdom": "^20.0.0",
     "@types/lodash": "^4.14.186",
+    "@typescript-eslint/parser": "^5.44.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-astro": "^0.21.0",
+    "prettier": "^2.7.1",
     "simple-git": "^3.14.1"
   }
 }
