--- a/astro/package.json
+++ b/astro/package.json
@@ -8,7 +8,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prettier": "prettier -w ."
   },
   "prettier": {
     "trailingComma": "es5",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@astro-community/astro-embed-twitter": "^0.1.3",
     "@astro-community/astro-embed-youtube": "^0.2.1",
+    "@astrojs/image": "^0.11.6",
     "@astrojs/mdx": "^0.11.4",
     "@astrojs/tailwind": "^2.1.0",
     "@eligundry/remark-excerpt": "^2.0.0",
@@ -33,6 +35,7 @@
     "clsx": "^1.2.1",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.3",
+    "fast-average-color-node": "^2.4.0",
     "jsdom": "^20.0.1",
     "lastfm-typed": "^2.1.0",
     "lodash": "^4.17.21",
@@ -49,6 +52,7 @@
     "remark-inline-links": "^6.0.1",
     "remark-parse": "^10.0.1",
     "remark-unwrap-images": "^3.0.1",
+    "sharp": "^0.31.2",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
