--- a/astro/package.json
+++ b/astro/package.json
@@ -23,6 +23,7 @@
     "@astro-community/astro-embed-youtube": "^0.2.1",
     "@astrojs/image": "^0.11.6",
     "@astrojs/mdx": "^0.11.4",
+    "@astrojs/rss": "^1.1.0",
     "@astrojs/tailwind": "^2.1.0",
     "@eligundry/remark-excerpt": "^2.0.0",
     "@tailwindcss/typography": "^0.5.7",
@@ -36,6 +37,7 @@
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.3",
     "fast-average-color-node": "^2.4.0",
+    "feed": "^4.2.2",
     "jsdom": "^20.0.1",
     "lastfm-typed": "^2.1.0",
     "lodash": "^4.17.21",
@@ -53,7 +55,8 @@
     "remark-parse": "^10.0.1",
     "remark-unwrap-images": "^3.0.1",
     "sharp": "^0.31.2",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "theme-change": "^2.2.0"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
