--- a/astro/package.json
+++ b/astro/package.json
@@ -23,16 +23,21 @@
     "@astro-community/astro-embed-youtube": "^0.2.1",
     "@astrojs/image": "^0.11.6",
     "@astrojs/mdx": "^0.11.4",
+    "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^1.1.0",
     "@astrojs/tailwind": "^2.1.0",
     "@eligundry/remark-excerpt": "^2.0.0",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "astro": "^1.5.0",
     "axios": "^0.27.2",
     "axios-cache-interceptor": "^0.10.7",
     "cache-manager": "^5.1.3",
     "cache-manager-better-sqlite3": "^1.0.2",
     "canvas": "^2.10.1",
+    "chart.js": "^4.0.1",
+    "chartjs-adapter-date-fns": "^2.0.1",
     "clsx": "^1.2.1",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.3",
@@ -44,6 +49,10 @@
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
     "postcss-nesting": "^10.2.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
+    "react-dom": "^18.2.0",
+    "react-use": "^17.4.0",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-prism-plus": "^1.3.2",
