--- a/astro/package.json
+++ b/astro/package.json
@@ -52,6 +52,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-use": "^17.4.0",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
