--- a/astro/package.json
+++ b/astro/package.json
@@ -34,7 +34,7 @@
     "axios": "^0.27.2",
     "axios-cache-interceptor": "^0.10.7",
     "cache-manager": "^5.1.3",
-    "cache-manager-better-sqlite3": "^1.0.2",
+    "cache-manager-better-sqlite3": "^1.1.0",
     "canvas": "^2.10.1",
     "chart.js": "^4.0.1",
     "chartjs-adapter-date-fns": "^2.0.1",
@@ -43,6 +43,7 @@
     "date-fns": "^2.29.3",
     "fast-average-color-node": "^2.4.0",
     "feed": "^4.2.2",
+    "image-size": "^1.0.2",
     "jsdom": "^20.0.1",
     "lastfm-typed": "^2.1.0",
     "lodash": "^4.17.21",
