--- a/astro/package.json
+++ b/astro/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build --verbose",
     "preview": "astro preview",
     "astro": "astro",
     "prettier": "prettier -w ."
