--- a/astro/package.json
+++ b/astro/package.json
@@ -41,6 +41,7 @@
     "clsx": "^1.2.1",
     "daisyui": "^2.27.0",
     "date-fns": "^2.29.3",
+    "delegated-events": "^1.1.2",
     "fast-average-color-node": "^2.4.0",
     "feed": "^4.2.2",
     "image-size": "^1.0.2",
