--- a/astro/package.json
+++ b/astro/package.json
@@ -77,6 +77,7 @@
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
     "eslint-plugin-astro": "^0.21.0",
+    "netlify-plugin-cache": "^1.0.3",
     "prettier": "^2.7.1",
     "simple-git": "^3.14.1"
   }
