--- a/astro/package.json
+++ b/astro/package.json
@@ -67,6 +67,7 @@
     "remark-parse": "^10.0.1",
     "remark-unwrap-images": "^3.0.1",
     "sharp": "^0.31.2",
+    "sitemap": "^7.1.1",
     "tailwindcss": "^3.1.8",
     "theme-change": "^2.2.0"
   },
