--- a/astro/package.json
+++ b/astro/package.json
@@ -27,6 +27,7 @@
     "@astrojs/rss": "^1.1.0",
     "@astrojs/tailwind": "^2.1.0",
     "@eligundry/remark-excerpt": "^2.0.0",
+    "@react-hookz/web": "^20.0.1",
     "@tailwindcss/typography": "^0.5.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -39,7 +40,7 @@
     "chart.js": "^4.0.1",
     "chartjs-adapter-date-fns": "^2.0.1",
     "clsx": "^1.2.1",
-    "daisyui": "^2.27.0",
+    "daisyui": "^2.45.0",
     "date-fns": "^2.29.3",
     "delegated-events": "^1.1.2",
     "fast-average-color-node": "^2.4.0",
@@ -55,7 +56,6 @@
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-use": "^17.4.0",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-prism-plus": "^1.3.2",
