Refactor the fancy background so the text is a lot cleaner

--- a/astro/package.json
+++ b/astro/package.json
@@ -37,6 +37,7 @@
     "canvas": "^2.10.1",
     "chart.js": "^4.0.1",
     "chartjs-adapter-date-fns": "^2.0.1",
+    "chartjs-chart-sankey": "^0.12.0",
     "clsx": "^1.2.1",
     "daisyui": "^2.45.0",
     "date-fns": "^2.29.3",
@@ -72,6 +73,7 @@
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/jsdom": "^20.0.0",
     "@types/lodash": "^4.14.186",
+    "@types/react": "^18.0.26",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
     "eslint-plugin-astro": "^0.21.0",
