Update Github file embed to be super fancy
It's incredible that I was able to that with any JS!

--- a/astro/package.json
+++ b/astro/package.json
@@ -71,6 +71,7 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/jsdom": "^20.0.0",
     "@types/lodash": "^4.14.186",
     "@types/react": "^18.0.26",
