--- a/astro/package.json
+++ b/astro/package.json
@@ -30,6 +30,7 @@
     "@react-hookz/web": "^22.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.0.15",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "axios": "^0.27.2",
     "axios-cache-interceptor": "^0.10.7",
     "cache-manager": "^5.1.7",
