--- a/astro/package.json
+++ b/astro/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.0.17",
     "astro-google-fonts-optimizer": "^0.2.2",
+    "astro-seo": "^0.7.1",
     "axios": "^0.27.2",
     "axios-cache-interceptor": "^0.10.7",
     "cache-manager": "^5.1.7",
