--- a/astro/package.json
+++ b/astro/package.json
@@ -23,6 +23,7 @@
     "@astro-community/astro-embed-youtube": "^0.2.2",
     "@astrojs/image": "^0.16.3",
     "@astrojs/mdx": "^0.18.2",
+    "@astrojs/partytown": "^1.2.0",
     "@astrojs/preact": "^2.1.0",
     "@astrojs/rss": "^2.3.1",
     "@astrojs/tailwind": "^3.1.1",
