--- a/astro/package.json
+++ b/astro/package.json
@@ -29,8 +29,9 @@
     "@react-hookz/web": "^23.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.1.8",
-    "astro-google-fonts-optimizer": "^0.2.2",
+    "astro-fontaine": "^1.0.0",
     "astro-seo": "^0.7.2",
+    "async-retry": "^1.3.3",
     "axios": "^1.3.4",
     "axios-cache-interceptor": "^1.0.1",
     "cache-manager": "^5.2.0",
@@ -70,13 +71,14 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/async-retry": "^1.4.5",
     "@types/jsdom": "^21.1.1",
     "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.30",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.36.0",
     "eslint-plugin-astro": "^0.26.1",
+    "fontaine": "^0.3.1",
     "netlify-plugin-cache": "^1.0.3",
     "prettier": "^2.8.7",
     "simple-git": "^3.17.0"
