--- a/astro/package.json
+++ b/astro/package.json
@@ -80,6 +80,7 @@
     "eslint-plugin-astro": "^0.26.1",
     "fontaine": "^0.3.1",
     "netlify-plugin-cache": "^1.0.3",
+    "netlify-plugin-inline-critical-css": "^2.0.0",
     "prettier": "^2.8.7",
     "simple-git": "^3.17.0"
   },
