--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: astro/package-lock.json
+      - run: npm ci
       - name: Run linters
         working-directory: astro
         run: npm run lint
@@ -29,6 +30,7 @@ jobs:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: astro/package-lock.json
+      - run: npm ci
       - name: Check types
         working-directory: astro
         run: npm run type-check
@@ -43,6 +45,7 @@ jobs:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: astro/package-lock.json
+      - run: npm ci
       - name: Astro check
         working-directory: astro
         run: npm run astro-check
