SEO & Style Tweaks (#262)
* Move the footer about to a markdown file

* About section now powers meta description

Parallelize data fetching on home page and layout

* Add a bunch of SEO tweaks

* Add badges to the posts on the home page

Also show the latest post.

* Move the coding section to markdown

* "Fix" the print logic for the resume

* Fix Github actions

* More CI fixes

* GH actions never stops being fun

* Update code component to be beautiful

- Fix all warnings from astro check
- Remove type checking job

* Smol copy change

* Linting fixes

* Update dependabot

* Get code expansion working 💯

--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -14,25 +14,15 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: astro/package-lock.json
+      - run: npm ci
+        working-directory: astro
       - name: Run linters
         working-directory: astro
         run: npm run lint
 
-  type-check:
-    name: Check types
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-      - name: Check types
-        working-directory: astro
-        run: npm run type-check
-
   astro-check:
-    name: Check types
+    name: Astro check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -40,6 +30,9 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: astro/package-lock.json
+      - run: npm ci
+        working-directory: astro
       - name: Astro check
         working-directory: astro
         run: npm run astro-check
