--- a/astro/package.json
+++ b/astro/package.json
@@ -12,7 +12,8 @@
     "prettier": "prettier -w .",
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx,.astro,.mdx",
     "astro-check": "astro check",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -86,7 +87,8 @@
     "fontaine": "^0.3.1",
     "netlify-plugin-cache": "^1.0.3",
     "prettier": "^2.8.7",
-    "simple-git": "^3.17.0"
+    "simple-git": "^3.17.0",
+    "vitest": "^0.30.1"
   },
   "overrides": {
     "react": "npm:@preact/compat@latest",
