--- a/astro/package.json
+++ b/astro/package.json
@@ -45,6 +45,7 @@
     "chartjs-chart-sankey": "^0.12.0",
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "delegated-events": "^1.1.2",
     "fast-average-color-node": "^2.6.0",
     "feed": "^4.2.2",
@@ -85,6 +86,7 @@
     "eslint-plugin-astro": "^0.26.1",
     "eslint-plugin-mdx": "^2.0.5",
     "fontaine": "^0.3.1",
+    "netlify-cli": "^15.6.0",
     "netlify-plugin-cache": "^1.0.3",
     "prettier": "^2.8.8",
     "simple-git": "^3.18.0",
