--- a/astro/package.json
+++ b/astro/package.json
@@ -4,7 +4,7 @@
   "version": "5.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "netlify dev",
     "start": "astro dev",
     "build": "astro build --verbose",
     "preview": "astro preview",
@@ -27,12 +27,13 @@
     "@astro-community/astro-embed-youtube": "^0.2.2",
     "@astrojs/image": "^0.16.7",
     "@astrojs/mdx": "^0.19.0",
+    "@astrojs/netlify": "^2.3.0",
     "@astrojs/partytown": "^1.2.0",
     "@astrojs/preact": "^2.1.0",
     "@astrojs/tailwind": "^3.1.2",
     "@react-hookz/web": "^23.0.0",
     "@tailwindcss/typography": "^0.5.9",
-    "astro": "^2.3.4",
+    "astro": "^2.7.3",
     "astro-fontaine": "^1.0.1",
     "astro-seo": "^0.7.2",
     "async-retry": "^1.3.3",
