--- a/astro/package.json
+++ b/astro/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx,.astro,.mdx",
     "astro-check": "astro check",
     "type-check": "tsc --noEmit",
-    "test": "vitest"
+    "test": "vitest",
+    "drizzle:migration:generate": "drizzle-kit generate:sqlite --out ./migrations --schema ./src/lib/database/schema.ts"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -31,6 +32,7 @@
     "@astrojs/partytown": "^1.2.0",
     "@astrojs/preact": "^2.1.0",
     "@astrojs/tailwind": "^3.1.2",
+    "@libsql/client": "^0.2.2",
     "@react-hookz/web": "^23.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.7.3",
@@ -48,6 +50,7 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "delegated-events": "^1.1.2",
+    "drizzle-orm": "^0.27.0",
     "fast-average-color-node": "^2.6.0",
     "feed": "^4.2.2",
     "image-size": "^1.0.2",
@@ -83,6 +86,7 @@
     "@types/lodash": "^4.14.194",
     "@types/react": "^18.2.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "drizzle-kit": "^0.19.3",
     "eslint": "^8.39.0",
     "eslint-plugin-astro": "^0.26.1",
     "eslint-plugin-mdx": "^2.0.5",
