--- a/astro/package.json
+++ b/astro/package.json
@@ -46,6 +46,7 @@
     "chart.js": "^4.3.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-sankey": "^0.12.0",
+    "csv-parse": "^5.4.0",
     "daisyui": "^2.51.6",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
