--- a/astro/package.json
+++ b/astro/package.json
@@ -32,6 +32,7 @@
     "@astrojs/partytown": "^1.2.0",
     "@astrojs/preact": "^2.1.0",
     "@astrojs/tailwind": "^3.1.2",
+    "@atproto/api": "^0.3.13",
     "@libsql/client": "^0.2.2",
     "@react-hookz/web": "^23.0.0",
     "@tailwindcss/typography": "^0.5.9",
@@ -78,7 +79,9 @@
     "sharp": "^0.31.3",
     "sitemap": "^7.1.1",
     "tailwindcss": "^3.3.2",
-    "theme-change": "^2.5.0"
+    "theme-change": "^2.5.0",
+    "ts-dedent": "^2.2.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
