--- a/astro/package.json
+++ b/astro/package.json
@@ -40,6 +40,7 @@
     "async-retry": "^1.3.3",
     "axios": "^1.4.0",
     "axios-cache-interceptor": "^1.2.0",
+    "basic-auth": "^2.0.1",
     "cache-manager": "^5.2.3",
     "cache-manager-better-sqlite3": "^1.1.2",
     "chart.js": "^4.3.0",
@@ -84,6 +85,7 @@
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/async-retry": "^1.4.5",
+    "@types/basic-auth": "^1.1.3",
     "@types/jsdom": "^21.1.1",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.14",
