Just gonna have to ignore linting issues

--- a/astro/.eslintrc
+++ b/astro/.eslintrc
@@ -18,6 +18,12 @@
         "sourceType": "module"
       },
       "rules": {}
+    },
+    {
+      "files": ["*.mdx"],
+      "rules": {
+        "null-null": "off"
+      }
     }
   ]
 }
