--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@astrojs/netlify": "^6.0.0",
     "@astrojs/partytown": "^2.1.2",
     "@astrojs/preact": "^4.0.0",
+    "@astrojs/prism": "^3.2.0",
     "@astrojs/tailwind": "^5.1.3",
     "@atproto/api": "^0.13.19",
     "@libsql/client": "^0.14.0",
@@ -42,7 +43,7 @@
     "axios": "^1.7.9",
     "axios-cache-interceptor": "^1.6.2",
     "basic-auth": "^2.0.1",
-    "cache-manager": "^6.3.0",
+    "cacheable": "^1.8.5",
     "chart.js": "^4.4.7",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-sankey": "^0.13.0",
@@ -80,7 +81,8 @@
     "tailwindcss": "^3.4.16",
     "theme-change": "^2.5.0",
     "ts-dedent": "^2.2.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
