--- a/eslint.config.json
+++ b/eslint.config.json
@@ -1,18 +1,28 @@
 {
-  "extends": ["plugin:astro/recommended", "plugin:mdx/recommended"],
+  "extends": [
+    "plugin:astro/recommended",
+    "plugin:mdx/recommended"
+  ],
   "overrides": [
     {
-      "files": ["*.astro"],
+      "files": [
+        "*.astro"
+      ],
       "parser": "astro-eslint-parser",
       "parserOptions": {
         "parser": "@typescript-eslint/parser",
-        "extraFileExtensions": [".astro"],
+        "extraFileExtensions": [
+          ".astro"
+        ],
         "sourceType": "module"
       },
       "rules": {}
     },
     {
-      "files": ["*.ts", "*.tsx"],
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "sourceType": "module"
@@ -20,7 +30,9 @@
       "rules": {}
     },
     {
-      "files": ["*.mdx"],
+      "files": [
+        "*.mdx"
+      ],
       "rules": {
         "null-null": "off"
       }
