--- a/eslint.config.json
+++ b/eslint.config.json
@@ -1,7 +1,8 @@
 {
   "extends": [
     "plugin:astro/recommended",
-    "plugin:mdx/recommended"
+    "plugin:mdx/recommended",
+    "prettier"
   ],
   "overrides": [
     {
