--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build --verbose",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
     "prettier": "prettier -w .",
