--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@astrojs/netlify": "^6.0.0",
     "@astrojs/partytown": "^2.1.2",
     "@astrojs/preact": "^4.0.0",
-    "@astrojs/prism": "^3.2.0",
     "@astrojs/tailwind": "^5.1.3",
     "@atproto/api": "^0.13.19",
     "@libsql/client": "^0.14.0",
@@ -37,7 +36,6 @@
     "@react-hookz/web": "^24.0.4",
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^5.0.3",
-    "astro-fontaine": "^1.0.1",
     "astro-seo": "^0.8.4",
     "async-retry": "^1.3.3",
     "axios": "^1.7.9",
@@ -68,7 +66,6 @@
     "react-icons": "^5.4.0",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
-    "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "rehype-unwrap-images": "^1.0.0",
     "remark": "^15.0.1",
@@ -82,6 +79,7 @@
     "theme-change": "^2.5.0",
     "ts-dedent": "^2.2.0",
     "ts-node": "^10.9.2",
+    "vite-plugin-webfont-dl": "^3.10.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
