--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@eligundry/eligundry.com",
   "type": "module",
   "version": "6.0.0",
+  "packageManager": "pnpm@9.15.3",
   "license": "MIT",
   "scripts": {
     "dev": "astro dev",
