--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "async-retry": "^1.3.3",
     "axios": "^1.7.9",
     "basic-auth": "^2.0.1",
+    "canvas": "^3.1.0",
     "chart.js": "^4.4.7",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-sankey": "^0.14.0",
