--- a/package.json
+++ b/package.json
@@ -111,6 +111,9 @@
   },
   "overrides": {
     "react": "npm:@preact/compat@latest",
-    "react-dom": "npm:@preact/compat@latest"
+    "react-dom": "npm:@preact/compat@latest",
+    "fast-average-color-node": {
+      "canvas": "3.1.0"
+    }
   }
 }
